# rl-ar

./: .gitignore  pyproject.toml  train.py
rl_ar/: env.py  registry.py
rl_ar/action_dists/: autoregressive.py  fake_autoregressive.py  fake_multicategorical.py
rl_ar/models/: autoregressive.py  baseline.py  config.py  fake_autoregressive.py  fake_multicategorical.py
tests/: test_env.py
