[tool.poetry]
name = "rl-ar"
version = "0.1.0"
description = ""
authors = ["Tomasz Wrona <tomasz@wrona.me>"]

[tool.poetry.dependencies]
python = "^3.8"
ray = {version = "1.6.0", extras = ["default", "tune", "rllib"]}
torch = "^1.9.0"
gym = "^0.19.0"
wandb = "^0.12.1"
torchinfo = "^1.5.3"

[tool.poetry.dev-dependencies]
black = "^21.8b0"
tensorboard = "^2.6.0"
pytest = "^6.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
